--- a/.github/workflows/learn.yml
+++ b/.github/workflows/learn.yml
@@ -41,9 +41,9 @@ jobs:
       - name: 'Az CLI login'
         uses: azure/login@v1
         with:
-          client-id: ${{ efc5f71b-afc3-406f-b912-6012516920cf }}
-          tenant-id: ${{ 31e7aafe-c5dc-44d2-8062-99c99f5c0f1e }}
-          subscription-id: ${{ 757be1a5-118f-4565-a256-462796201fbe }}
+          client-id: ${ efc5f71b-afc3-406f-b912-6012516920cf }
+          tenant-id: ${ 31e7aafe-c5dc-44d2-8062-99c99f5c0f1e }
+          subscription-id: ${ 757be1a5-118f-4565-a256-462796201fbe }
   
       - name: 'Run az commands'
         run: |
